[package]
name = "zip-writer"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
crc32fast = { optional = true, version = "1.4.2" }
tokio = { features = ["io-util"], optional = true, version = "1" }

[features]
default = ["crc", "tokio"]
crc = ["dep:crc32fast"]
tokio = ["dep:tokio"]

[dev-dependencies]
tokio = { features = ["macros", "rt"], version = "1.42.0" }
