[package]
name = "zip-writer"
version = "0.3.0"
edition = "2021"
license = "MIT"

[dependencies]
async-compression = { features = ["deflate", "tokio"], version = "0.4.22" }
crc32fast = { optional = true, version = "1.4.2" }
flate2 = { default-features = false, features = ["zlib-rs"], optional = true, version = "1.1.0" }
tokio = { features = ["io-util"], optional = true, version = "1" }

[features]
default = ["crc", "deflate"]
crc = ["dep:crc32fast"]
deflate = ["dep:flate2"]
tokio = ["dep:tokio"]

[dev-dependencies]
tokio = { features = ["macros", "rt"], version = "1.42.0" }
